--- a/02gioithieu-chitiet.html
+++ b/02gioithieu-chitiet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -56,25 +56,23 @@
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
             <a href="#" title="Tin tức">Tin tức</a>
+            <a href="#" title="Giới thiệu">Giới thiệu</a>
         </div>
     </div>
-     
-     <!-- phan content -->
     <div class="content">
+        <!--phần content-->
         <div class="container clearfix">
             <div class="col_l">
-                <div class="sub-menu_content">
-                    <ul>
-                        <li class="sub-menu_item"><a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
-                            <ul class="sub-menu_content-hide">
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>    
-                            </ul>
-                        </li>
-                        <li><a href="#" class="sub-menu_link">Tin công ty<i class="fa fa-angle-down"></i></a>
-                        <li><a href="#" class="sub-menu_link">Tin tuyển dụng<i class="fa fa-angle-down"></i></a>
-                    </ul>
+                <div class="gioithieu">
+                    <a href="#" class="gt-cap">Giới thiệu chung</a>
+                    <div class="sub-content">
+                        <ul>
+                            <li><a href="#">Hồ sơ năng lực</a></li>
+                            <li><a href="#">Thành tích giải thưởng</a></li>
+                            <li><a href="#">Sơ đồ tổ chức</a></li>
+                            <li><a href="#">Tầm nhìn sứ mệnh</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="spnoibat">
                     <a href="#" class="cap"><b>sản phẩm nổi bật</b></a>
@@ -94,31 +92,32 @@
                     <div class="wrap-khoitin">
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                     </div>
                 </div>
             </div> <!--end col-l-->
             <div class="col_r">
                 <div class="sub-content">
-                    <h3 class="mg-t-0">Bảo trì bảo dưỡng quạt công nghiệp quạt hút</h3>
-                    <div class="commonHeadTool"> <!-- tang giam co chu -->
+                    <h3 class="mg-t-0">Giới thiệu chung</h3>
+                    <!--tăng giảm cỡ chữ-->
+                    <div class="commonHeadTool">
                         <div class="date">18/04/2018 - 07:20 AM - 1.236 lượt xem</div>
                         <div class="right">
                             <div class="changeSize">
@@ -136,10 +135,25 @@
                             <div class="fb-like" data-href="" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                         </div>
                     </div><!--end tang giam co chu-->
-                    <!-- phan noi dung chinh -->
                     <div class="text">
-                        
-                    </div> <!-- end text - phan noi dung chinh -->
+                        <p><b>Công ty cổ phần thiết bị công nghiệp Toàn Cầu</b></p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu xin gửi tới Quý khách hàng lời chào trân trọng và lời chúc sức khỏe – an khang – phồn thịnh, cùng sự hợp tác tới toàn thể Quý khách hàng.</p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo, chuyên nghiệp và tận tâm trong công việc, Công ty cổ phần thiết bị công nghiệp Toàn Cầu cam kết hợp tác cùng phát triển bền vững với Quý khách trong quá trình công nghiệp hoá hiện nay.</p>
+                        <p>Các sản phẩm, dịch vụ Công ty cổ phần thiết bị công nghiệp Toàn Cầu cung cấp đáp ứng quy trình tự động hoá sản xuất và tạo môi trường sản xuất trong sạch, nhằm đem lại hiệu qủa sản xuất kinh tế cao nhất đối với Quý khách.</p>
+                        <p>Sản phẩm, dịch vụ Công ty cổ phần thiết bị công nghiệp Toàn Cầu cung cấp gồm :</p>
+                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi di động, quạt hút bụi nhà xưởng, quạt thông gió, hệ thống hút lọc bụi,…</p>
+                        <p>Dịch vụ sửa chữa, bảo dưỡng quạt công nghiệp, hệ thống hút lọc bụi….</p>
+                        <p>Với phương châm “càng sáng tạo hơn nữa để tạo ra những sản phẩm có tính ứng dụng cao” (Be creative than the products with high applicability,) chúng tôi sẽ làm hài lòng mọi yêu cầu về dịch vụ của Quý khách hàng cũng như uy tín về sản phẩm.</p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu cam kết sản xuất và dịch vụ Quạt công nghiệp tốt nhất, hiện đại nhất, đa dạng, phong phú về chủng loại và mẫu mã sản phẩm, kết cấu các sản phẩm có độ bền vững cao, thực tiễn cao.</p>
+                        <p>Hãy liên hệ ngay với chúng tôi để có được sự tư vấn và gói dịch vụ tốt nhất cho nhu cầu sản xuất của Quý khách.</p>
+                        <p>
+                            Công ty cổ phần thiết bị công nghiệp Toàn Cầu<br />
+                            Trụ sở chính: Số 134 Hàng Bạc, phường Hàng Bạc, quận Hoàn Kiếm, Hà Nội<br />
+                            Điện thoại:  0912 345 931<br />
+                            Email: quattoancau@gmail.com<br />
+                            Website: www.quattoancau.vn
+                        </p>
+                    </div><!--end text-->
                     <!--tool gui mail plugin mxh-->
                     <div id="tool-footer-post-detail">
                         <div class="tool-left fl-left">
@@ -273,12 +287,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!--end gt-khac-->             
-                </div>          
+                    </div><!--end gt-khac-->
+                </div> <!--end sub-content-->
             </div> <!--end col-r-->
         </div>
-    </div><!--content-->   
-      <!--khoi service-->
+    </div><!--content-->
+    <!--khoi service-->
     <div class="service">
         <div class="container">
             <div class="row">
@@ -397,6 +411,7 @@
     <script src="Theme01/Assets/js/slick-1.8.1/slick/slick.js"></script>
     <script src="Theme01/Assets/js/x-resmenu.min.js"></script>
     <script src="Theme01/Assets/js/main.js"></script>
+
     <script>
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -482,15 +497,13 @@
             ]
         });
     </script><!--slide cac bai gioi thieu khac-->
-    <script> //sub-menu_conten show hide
-    $('.sub-menu_item').click(function(){
-        $(this).toggleClass('sub-menu_show');
-        $('.sub-menu_link').removeClass('active');
-        $('.sub-menu_link').addClass('active');
-        return false;
-    });
 
-
-    </script>
 </body>
+
+
+
+
+
+
+
 </html>
