--- a/03tintuc-trangchinh.html
+++ b/03tintuc-trangchinh.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -115,7 +115,7 @@
             </div>
             <div class="row tincongty"> <!-- khoi tincongty -->               
                 <div class="col-xl-4 item">
-                    <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/loiichquathutkhoi.jpg" alt=""></a></div>
+                    <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
                     <div class="desc">
                         <div class="lich"><span class="year">2018</span><br /><span>23/03</span></div>
                         <a href="#" class="title">Lợi ích của quạt hút khói bếp</a>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-xl-4 item">
-                    <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/loiichquathutkhoi.jpg" alt=""></a></div>
+                    <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
                     <div class="desc">
                         <div class="lich"><span class="year">2018</span><br /><span>23/03</span></div>
                         <a href="#" class="title">Lợi ích của quạt hút khói bếp</a>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-xl-4 item">
-                    <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/loiichquathutkhoi.jpg" alt=""></a></div>
+                    <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
                     <div class="desc">
                         <div class="lich"><span class="year">2018</span><br /><span>23/03</span></div>
                         <a href="#" class="title">Lợi ích của quạt hút khói bếp</a>
