--- a/10-sanpham-trangchinh.html
+++ b/10-sanpham-trangchinh.html
@@ -51,55 +51,69 @@
             </div>
         </div><!--header-top-->
     </div> <!--end header-->
-
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
             <a href="#" title="Tin tức">Tin tức</a>
         </div>
     </div>
-     
-     <!-- phan content -->
+
+    <!-- phan content -->
     <div class="content">
         <div class="container clearfix">
             <div class="col_l">
+                <div class="search-box">
+                    <h3>tìm kiếm nâng cao</h3>
+                    <input type="text" value="" placeholder="Từ khóa"/>
+                    <select>
+                        <option>Quạt làm mát</option>
+                        <option>Quạt làm mát</option>
+                        <option>Quạt làm mát</option>
+                    </select>
+                    <select>
+                        <option>Nhà sản xuất</option>
+                        <option>Quạt làm mát</option>
+                        <option>Quạt làm mát</option>
+                    </select>
+                    <select>
+                        <option>Khoảng giá</option>
+                        <option>Quạt làm mát</option>
+                        <option>Quạt làm mát</option>
+                    </select>
+                    <select>
+                        <option>Hiệu điện thế</option>
+                        <option>Quạt làm mát</option>
+                        <option>Quạt làm mát</option>
+                    </select>
+                    <a href="#">Tìm kiếm</a>
+                </div>
                 <div class="sub-menu_content">
                     <ul>
-                        <li class="sub-menu_item"><a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
+                        <li class="sub-menu_item">
+                            <a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
                             <ul class="sub-menu_content-hide">
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>    
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                             </ul>
                         </li>
-                        <li class="sub-menu_item"><a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
+                        <li class="sub-menu_item">
+                            <a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
                             <ul class="sub-menu_content-hide">
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>    
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                             </ul>
                         </li>
-                        <li class="sub-menu_item"><a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
+                        <li class="sub-menu_item">
+                            <a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
                             <ul class="sub-menu_content-hide">
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>    
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                             </ul>
                         </li>
                     </ul>
-                </div>
-                <div class="spnoibat">
-                    <a href="#" class="cap"><b>sản phẩm nổi bật</b></a>
-                    <div class="spnoibat-slide">
-                        <div class="khoisanpham">
-                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/sanphamnoibat.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><b>Quạt cao áp vận chuyển hạt rời</b></div>
-                        </div>
-                        <div class="khoisanpham">
-                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/sanphamnoibat.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><b>Quạt cao áp vận chuyển hạt rời</b></div>
-                        </div>
-                    </div>
                 </div>
                 <div class="tinnoibat">
                     <a href="#" class="cap"><b>Tin tức nổi bật</b></a>
@@ -128,21 +142,109 @@
                 </div>
             </div> <!--end col-l-->
             <div class="col_r">
-                <div class="sub-content">
-                    <h3 class="mg-t-0">Giới thiệu chung</h3>
-                    <div class="tintucsanpham">
+                <div class="modul-sp">
+                    <div class="main-item__cap">
+                        <span class="caption"><a href="#">Quạt làm mát</a></span>
+                    </div>
+                    <div class="sp-wrap">
                         <div class="item">
-                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt=""></a></div>
-                            <div class="desc">
-                                <a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a>
-                                <div class="date-views">
-                                     <span><i class="fa fa-clock-o"></i>07/08/2018</span> <span><i class="fa fa-eye"></i>999 lượt xem</span>
-                                </div>
-                                <p>Bảo dưỡng quạt công nghiệp (bảo dưỡng quạt hút, bảo dưỡng quạt thông gió, bảo dưỡng quạt hút khói bếp,…) là tập hợp tất cả các phương pháp kỹ thuật, các phương tiện nhằm phòng ngừa những hư hỏng có thể sẽ xảy ra...</p>
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
                             </div>
                         </div>
-                    </div>                  
-                </div> 
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                            <div class="info">
+                                <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                                <p style="color: red;">liên hệ</p>
+                                <a href="#" class="muangay">Mua ngay</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>              
                 <div class="paging SplitPages">
                     <!--phan trang-->
                     <a class="dau" href="#">
@@ -161,10 +263,10 @@
                         Trang tiếp
                         <i class="fa fa-angle-right"></i>
                     </a>
-                </div>  
+                </div>
             </div> <!--end col-r-->
         </div>
-    </div><!--content-->   
+    </div><!--content-->
     <!--khoi service-->
     <div class="service">
         <div class="container">
@@ -284,15 +386,6 @@
     <script src="Theme01/Assets/js/slick-1.8.1/slick/slick.js"></script>
     <script src="Theme01/Assets/js/x-resmenu.min.js"></script>
     <script src="Theme01/Assets/js/main.js"></script>
-    <script> //slide san pham noi bat 
-        $('.spnoibat-slide').slick({
-            dots: false,
-            arrows: true,
-            infinite: true,
-            speed: 300,
-            slidesToShow: 1
-        });
-    </script>
     <script> //sub-menu_conten show hide
     $('.sub-menu_item').click(function(){
         $(this).toggleClass('sub-menu_show');
