--- a/11-sanpham-chitiet-tongquansanpham.html
+++ b/11-sanpham-chitiet-tongquansanpham.html
@@ -485,7 +485,17 @@ Cảm ơn quý khách!
             infinite: false,
             speed: 300,
             slidesToShow: 4,
-            slideToScroll:4
+            slideToScroll:4,
+            responsive: [
+            {
+                breakpoint: 767,
+                settings: {
+                    arrows: false,
+                    slidesToShow:2,
+                    slideToScroll:2
+                }
+            }
+            ]
         });
     </script>
     <!-- slick xem anh -->
