--- a/16-sanpham-ketquatimkiem.html
+++ b/16-sanpham-ketquatimkiem.html
@@ -54,67 +54,135 @@
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
-            <a href="#" title="Tin tức">Công trình</a>
+            <a href="#" title="Sản phẩm">Sản phẩm</a>
+            <a href="#">Kết quả tìm kiếm</a>
         </div>
     </div>
+    <!--noi dung ket qua tim kiem-->
     <div class="content">
         <div class="container">
-            <div class="modul-congtrinh">
-                <h3>Công trình</h3>
-                <div class="filter-button">
-                    <a href="#">Tất cả</a>
-                    <a href="#">Hút khói</a>
-                    <a href="#">Hệ thống hút khói</a>
-                    <a href="#">Quạt công nghiệp</a>
-                    <a href="#">Quạt tạo gió</a>
-                    <a href="#">Thông gió</a>
-                    <a href="#">Tạo áp buồng thang bộ</a>
-                </div>
-                <div class="row item">
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+            <div class="ketquatimkiem">
+                <h3>Tìm thấy <span> 30</span> kết quả với từ khóa <span>“quạt làm mát”</span></h3>
+                <div class="sp-wrap">
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/item-quat.jpg" alt=""></a></div>
+                        <div class="info">
+                            <p><b>Quạt hút khói hành lang (quạt hướng trục)</b></p>
+                            <p style="color: red;">liên hệ</p>
+                            <a href="#" class="muangay">Mua ngay</a>
+                        </div>
                     </div>
                 </div>
                 <!--phan trang-->
@@ -135,10 +203,10 @@
                         Trang tiếp
                         <i class="fa fa-angle-right"></i>
                     </a>
-                </div>
-            </div> <!-- .end modul-congtrinh -->
-        </div>
-    </div>
+                </div><!--end paging splitPagé-->
+            </div> <!--end ket qua tim kiem-->
+         </div>
+    </div><!--end content-->
     <!--khoi service-->
     <div class="service">
         <div class="container">
