--- a/17-dichvu-trangchinh.html
+++ b/17-dichvu-trangchinh.html
@@ -54,21 +54,78 @@
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
-            <a href="#" title="Tin tức">Liên hệ</a>
+            <a href="#" title="dịch vụ">Dịch vụ</a>
         </div>
     </div>
+    <!--modul dich vu-->
     <div class="content">
-       <div class="guilienhethanhcong-w">
-            <div class="guilienhethanhcong">
-                <img src="Theme01/Assets/css/images/guilienhethanhcong.png" alt="">
-                <h4>Gửi liên hệ thành công!</h4>
-                <p>Cảm ơn quý khách đã đặt hàng tại <b>Quatcongnghiepvn.com</b></p>
-                <p>Chúng tôi sẽ gọi lại cho bạn trong 24h tới. Nếu có gì cần hỗ trợ thêm bạn vui lòng gọi đến Hotline để được tư vấn  <span style="color: red"><b>0912 345 931</b></span></p>
-                <a href="#">Trở về trang chủ</a>
-            </div>
-       </div>
+        <div class="container">
+            <div class="modul-dichvu">
+                <div class="row modul-dichvu_row">
+                    <div class="col-xl-6">
+                        <div class="modul-dichvu_img">
+                            <img src="Theme01/Assets/css/pic/images/modul-dichvu-img.jpg" alt="" />
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="modul-dichvu_desc">
+                            <h4>Dịch vụ sửa chữa - bảo dưỡng</h4>
+                            <p>Quạt Đạt Tâm (DATAFAN) cam kết cung cấp dịch vụ chất lượng cao Cung cấp một dịch vụ đồng bộ Đảm bảo mọi nhu cầu của khách…</p>
+                            <a href="#">Xem thêm <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row modul-dichvu_row">
+                    <div class="col-xl-6">
+                        <div class="modul-dichvu_img">
+                            <img src="Theme01/Assets/css/pic/images/modul-dichvu-img2.jpg" alt="" />
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="modul-dichvu_desc">
+                            <h4>Dịch vụ sửa chữa - bảo dưỡng</h4>
+                            <p>Quạt Đạt Tâm (DATAFAN) cam kết cung cấp dịch vụ chất lượng cao Cung cấp một dịch vụ đồng bộ Đảm bảo mọi nhu cầu của khách…</p>
+                            <a href="#">Xem thêm <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row modul-dichvu_row">
+                    <div class="col-xl-6">
+                        <div class="modul-dichvu_img">
+                            <img src="Theme01/Assets/css/pic/images/modul-dichvu-img3.jpg" alt="" />
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="modul-dichvu_desc">
+                            <h4>Dịch vụ sửa chữa - bảo dưỡng</h4>
+                            <p>Quạt Đạt Tâm (DATAFAN) cam kết cung cấp dịch vụ chất lượng cao Cung cấp một dịch vụ đồng bộ Đảm bảo mọi nhu cầu của khách…</p>
+                            <a href="#">Xem thêm <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!--phan trang-->
+                <div class="paging SplitPages">
+                    <a class="dau" href="#">
+                        <i class="fa fa-angle-left"></i>
+                        Trang trước
+                    </a>
+                    <a href="#" class="truoc"><i class="fa fa-angle-left"></i></a>
+                    <a class="hientai" href="#">
+                        1
+                    </a>
+                    <a class="trangkhac" title="Go to 2" href="#">
+                        2
+                    </a>
+                    <a href="#" class="sau"><i class="fa fa-angle-right"></i></a>
+                    <a class="cuoi" href="#">
+                        Trang tiếp
+                        <i class="fa fa-angle-right"></i>
+                    </a>
+                </div><!--end paging splitPagé-->
+            </div><!-- end modul-dichvu-->
+        </div>
     </div>
-        <!--khoi service-->
+    <!--khoi service-->
     <div class="service">
         <div class="container">
             <div class="row">
