--- a/19-guidichvuthanhcong.html
+++ b/19-guidichvuthanhcong.html
@@ -54,21 +54,21 @@
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
-            <a href="#" title="Tin tức">Liên hệ</a>
+            <a href="#" title="Tin tức">Gửi liên hệ thành công</a>
         </div>
     </div>
     <div class="content">
-       <div class="guilienhethanhcong-w">
+        <div class="guilienhethanhcong-w">
             <div class="guilienhethanhcong">
                 <img src="Theme01/Assets/css/images/guilienhethanhcong.png" alt="">
-                <h4>Gửi liên hệ thành công!</h4>
-                <p>Cảm ơn quý khách đã đặt hàng tại <b>Quatcongnghiepvn.com</b></p>
+                <h4>Gửi dịch vụ thành công!</h4>
+                <p>Cảm ơn quý khách đã quan tâm đến dịch vụ của chúng tôi</p>
                 <p>Chúng tôi sẽ gọi lại cho bạn trong 24h tới. Nếu có gì cần hỗ trợ thêm bạn vui lòng gọi đến Hotline để được tư vấn  <span style="color: red"><b>0912 345 931</b></span></p>
                 <a href="#">Trở về trang chủ</a>
             </div>
-       </div>
+        </div>
     </div>
-        <!--khoi service-->
+    <!--khoi service-->
     <div class="service">
         <div class="container">
             <div class="row">
