--- a/20-hoidap-hotrokythuat.html
+++ b/20-hoidap-hotrokythuat.html
@@ -54,71 +54,122 @@
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
-            <a href="#" title="Tin tức">Công trình</a>
+            <a href="#" title="Tin tức">Tin tức</a>
         </div>
     </div>
+
+    <!-- phan content -->
     <div class="content">
-        <div class="container">
-            <div class="modul-congtrinh">
-                <h3>Công trình</h3>
-                <div class="filter-button">
-                    <a href="#">Tất cả</a>
-                    <a href="#">Hút khói</a>
-                    <a href="#">Hệ thống hút khói</a>
-                    <a href="#">Quạt công nghiệp</a>
-                    <a href="#">Quạt tạo gió</a>
-                    <a href="#">Thông gió</a>
-                    <a href="#">Tạo áp buồng thang bộ</a>
-                </div>
-                <div class="row item">
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+        <div class="container clearfix">
+            <div class="col_l">
+                <div class="gioithieu">
+                    <div class="sub-content">
+                        <ul>
+                            <li><a href="#" class="active">Hỏi đáp, hỗ trợ kỹ thuật</a></li>
+                            <li><a href="#">Hồ sơ năng lực</a></li>
+                            <li><a href="#">Thành tích giải thưởng</a></li>
+                            <li><a href="#">Sơ đồ tổ chức</a></li>
+                            <li><a href="#">Tầm nhìn sứ mệnh</a></li>
+                        </ul>
                     </div>
                 </div>
-                <!--phan trang-->
+                <div class="spnoibat">
+                    <a href="#" class="cap"><b>sản phẩm nổi bật</b></a>
+                    <div class="spnoibat-slide">
+                        <div class="khoisanpham">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/sanphamnoibat.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><b>Quạt cao áp vận chuyển hạt rời</b></div>
+                        </div>
+                        <div class="khoisanpham">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/sanphamnoibat.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><b>Quạt cao áp vận chuyển hạt rời</b></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tinnoibat">
+                    <a href="#" class="cap"><b>Tin tức nổi bật</b></a>
+                    <div class="wrap-khoitin">
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!--end col-l-->
+            <div class="col_r">
+                <div class="sub-content">
+                    <h3 class="mg-t-0">Hỏi đáp, hỗ trợ kỹ thuật</h3>
+                    <div class="tintucsanpham">
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/modul-hoidap-quatthonggio.jpg" alt=""></a></div>
+                            <div class="desc">
+                                <a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a>
+                                <div class="date-views">
+                                    <span><i class="fa fa-clock-o"></i>07/08/2018</span> <span><i class="fa fa-eye"></i>999 lượt xem</span>
+                                </div>
+                                <p>Bảo dưỡng quạt công nghiệp (bảo dưỡng quạt hút, bảo dưỡng quạt thông gió, bảo dưỡng quạt hút khói bếp,…) là tập hợp tất cả các phương pháp kỹ thuật, các phương tiện nhằm phòng ngừa những hư hỏng có thể sẽ xảy ra...</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/modul-hoidap-quytrinh.jpg" alt=""></a></div>
+                            <div class="desc">
+                                <a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a>
+                                <div class="date-views">
+                                    <span><i class="fa fa-clock-o"></i>07/08/2018</span> <span><i class="fa fa-eye"></i>999 lượt xem</span>
+                                </div>
+                                <p>Tại các nhà hàng, quán ăn, cửa hàng ăn uống,..., khu bếp ăn công nghiệp thì vị trí nhà bếp vô cùng quan trọng. Khu vực bếp ảnh hưởng lớn đến chất lượng thực phẩm, các món ăn phục vụ cho khách, cũng như môi trường làm việc...</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/modul-hoidap-quytrinh.jpg" alt=""></a></div>
+                            <div class="desc">
+                                <a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a>
+                                <div class="date-views">
+                                    <span><i class="fa fa-clock-o"></i>07/08/2018</span> <span><i class="fa fa-eye"></i>999 lượt xem</span>
+                                </div>
+                                <p>Chúng ta cũng biết, tại các khu vực tập trung đông dân cư như trường học, bệnh viện, nhà hàng, khách sạn,... thì khu vực bếp ăn công nghiệp trong các tòa nhà lớn này được đánh giá là nơi có nguy cơ phát sinh cháy nổ, hỏa hoạn cao nhất, gây ảnh hưởng đến sự an toàn, tính mạng cho rất nhiều người tại nơi đó.</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/modul-hoidap-quatthonggio.jpg" alt=""></a></div>
+                            <div class="desc">
+                                <a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a>
+                                <div class="date-views">
+                                    <span><i class="fa fa-clock-o"></i>07/08/2018</span> <span><i class="fa fa-eye"></i>999 lượt xem</span>
+                                </div>
+                                <p>Bảo dưỡng quạt công nghiệp (bảo dưỡng quạt hút, bảo dưỡng quạt thông gió, bảo dưỡng quạt hút khói bếp,…) là tập hợp tất cả các phương pháp kỹ thuật, các phương tiện nhằm phòng ngừa những hư hỏng có thể sẽ xảy ra...</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/modul-hoidap-quytrinh.jpg" alt=""></a></div>
+                            <div class="desc">
+                                <a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a>
+                                <div class="date-views">
+                                    <span><i class="fa fa-clock-o"></i>07/08/2018</span> <span><i class="fa fa-eye"></i>999 lượt xem</span>
+                                </div>
+                                <p>Bảo dưỡng quạt công nghiệp (bảo dưỡng quạt hút, bảo dưỡng quạt thông gió, bảo dưỡng quạt hút khói bếp,…) là tập hợp tất cả các phương pháp kỹ thuật, các phương tiện nhằm phòng ngừa những hư hỏng có thể sẽ xảy ra...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="paging SplitPages">
+                    <!--phan trang-->
                     <a class="dau" href="#">
                         <i class="fa fa-angle-left"></i>
                         Trang trước
@@ -136,9 +187,9 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 </div>
-            </div> <!-- .end modul-congtrinh -->
+            </div> <!--end col-r-->
         </div>
-    </div>
+    </div><!--content-->
     <!--khoi service-->
     <div class="service">
         <div class="container">
@@ -258,5 +309,24 @@
     <script src="Theme01/Assets/js/slick-1.8.1/slick/slick.js"></script>
     <script src="Theme01/Assets/js/x-resmenu.min.js"></script>
     <script src="Theme01/Assets/js/main.js"></script>
+    <script> //slide san pham noi bat
+        $('.spnoibat-slide').slick({
+            dots: false,
+            arrows: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 1
+        });
+    </script>
+    <script> //sub-menu_conten show hide
+    $('.sub-menu_item').click(function(){
+        $(this).toggleClass('sub-menu_show');
+        $('.sub-menu_link').removeClass('active');
+        $('.sub-menu_link').addClass('active');
+        return false;
+    });
+
+
+    </script>
 </body>
 </html>
