--- a/23-tailieu-baogia-chitiet.html
+++ b/23-tailieu-baogia-chitiet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -51,30 +51,28 @@
             </div>
         </div><!--header-top-->
     </div> <!--end header-->
-
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
-            <a href="#" title="Tin tức">Tin tức</a>
+            <a href="#" title="Hỗ trợ">Hỗ trợ</a>
+            <a href="#">Tài liệu, báo giá</a>
         </div>
     </div>
-     
-     <!-- phan content -->
-    <div class="content">
+
+    <!-- phan content -->
+    <div class="content modul-baogia">
         <div class="container clearfix">
             <div class="col_l">
-                <div class="sub-menu_content">
-                    <ul>
-                        <li class="sub-menu_item"><a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
-                            <ul class="sub-menu_content-hide">
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>    
-                            </ul>
-                        </li>
-                        <li><a href="#" class="sub-menu_link">Tin công ty<i class="fa fa-angle-down"></i></a>
-                        <li><a href="#" class="sub-menu_link">Tin tuyển dụng<i class="fa fa-angle-down"></i></a>
-                    </ul>
+                <div class="gioithieu">
+                    <div class="sub-content">
+                        <ul>
+                            <li><a href="#" class="active">Thông tin tài liệu</a></li>
+                            <li><a href="#">Chính sách</a></li>
+                            <li><a href="#">Thông báo</a></li>
+                            <li><a href="#">Báo giá thi công</a></li>
+                            <li><a href="#">Thông tin lắp đặt</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="spnoibat">
                     <a href="#" class="cap"><b>sản phẩm nổi bật</b></a>
@@ -117,8 +115,9 @@
             </div> <!--end col-l-->
             <div class="col_r">
                 <div class="sub-content">
-                    <h3 class="mg-t-0">Bảo trì bảo dưỡng quạt công nghiệp quạt hút</h3>
-                    <div class="commonHeadTool"> <!-- tang giam co chu -->
+                    <h3 class="mg-t-0">Báo giá thi công</h3>
+                    <!--tăng giảm cỡ chữ-->
+                    <div class="commonHeadTool">
                         <div class="date">18/04/2018 - 07:20 AM - 1.236 lượt xem</div>
                         <div class="right">
                             <div class="changeSize">
@@ -136,10 +135,20 @@
                             <div class="fb-like" data-href="" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                         </div>
                     </div><!--end tang giam co chu-->
-                    <!-- phan noi dung chinh -->
                     <div class="text">
-                        
-                    </div> <!-- end text - phan noi dung chinh -->
+                        <p><b>Công ty cổ phần thiết bị công nghiệp Toàn Cầu</b></p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu xin gửi tới Quý khách hàng lời chào trân trọng và lời chúc sức khỏe – an khang – phồn thịnh, cùng sự hợp tác tới toàn thể Quý khách hàng.</p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo, chuyên nghiệp và tận tâm trong công việc, Công ty cổ phần thiết bị công nghiệp Toàn Cầu cam kết hợp tác cùng phát triển bền vững với Quý khách trong quá trình công nghiệp hoá hiện nay.</p>
+                        <p>Các sản phẩm, dịch vụ Công ty cổ phần thiết bị công nghiệp Toàn Cầu cung cấp đáp ứng quy trình tự động hoá sản xuất và tạo môi trường sản xuất trong sạch, nhằm đem lại hiệu qủa sản xuất kinh tế cao nhất đối với Quý khách.</p>
+                        <p>Sản phẩm, dịch vụ Công ty cổ phần thiết bị công nghiệp Toàn Cầu cung cấp gồm :</p>
+                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi di động, quạt hút bụi nhà xưởng, quạt thông gió, hệ thống hút lọc bụi,…</p>
+                        <p>Dịch vụ sửa chữa, bảo dưỡng quạt công nghiệp, hệ thống hút lọc bụi….</p>
+                        <p>Với phương châm “càng sáng tạo hơn nữa để tạo ra những sản phẩm có tính ứng dụng cao” (Be creative than the products with high applicability,) chúng tôi sẽ làm hài lòng mọi yêu cầu về dịch vụ của Quý khách hàng cũng như uy tín về sản phẩm.</p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu cam kết sản xuất và dịch vụ Quạt công nghiệp tốt nhất, hiện đại nhất, đa dạng, phong phú về chủng loại và mẫu mã sản phẩm, kết cấu các sản phẩm có độ bền vững cao, thực tiễn cao.</p>
+                        <p>Hãy liên hệ ngay với chúng tôi để có được sự tư vấn và gói dịch vụ tốt nhất cho nhu cầu sản xuất của Quý khách.</p>
+                        <img src="Theme01/Assets/css/pic/images/23-chitiet.jpg" alt="">
+                        <a href="#" class="bt-download">download (120gb) <i class="fa fa-download"></i></a>
+                    </div><!--end text-->
                     <!--tool gui mail plugin mxh-->
                     <div id="tool-footer-post-detail">
                         <div class="tool-left fl-left">
@@ -182,103 +191,33 @@
                     <div class="fb-comments_wrap">
                         <div class="fb-comments" data-href="https://www.facebook.com/zuck/posts/10102735452532991?comment_id=1070233703036185" data-width="100%" data-numposts="3"></div>
                     </div>
-                    <h3>Các bài giới thiệu khác</h3>
-                    <!--cac bai gioi thieu khac-->
-                    <div class="gt-khac">
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
+                    <div class="bangtailieu-wrap">
+                        <h3 class="mg-t-0 mg-t-30">Các tài liệu khác</h3>
+                        <div class="bangtailieu"> <!--bang thu vien tai lieu-->
+                            <div class="items word">
+                                <a href="" class="nd-tailieu" style="background-image:url('Theme01/Assets/css/images/icon-word.png')">Quy định về phạm vi bảo hành các sản phẩm</a><span style="flex-grow:1;background-image: url('Theme01/Assets/css/images/icon-tailieu.png')">2KB</span><a href="#" style="background-image:url('Theme01/Assets/css/images/icon-down.png')">Tải về</a> <a href="#">Chi tiết <i class="fa fa-angle-right" ></i></a>
+                            </div>
+                            <div  class="items excel">
+                                <a href="" class="nd-tailieu" style="background-image:url('Theme01/Assets/css/images/icon-excel.png')">Quy định về phạm vi bảo hành các sản phẩm</a><span style="flex-grow:1;background-image: url('Theme01/Assets/css/images/icon-tailieu.png')">2KB</span><a href="#" style="background-image:url('Theme01/Assets/css/images/icon-down.png')">Tải về</a> <a href="#">Chi tiết <i class="fa fa-angle-right"></i></a>
+                            </div>
+                            <div class="items pdf">
+                                <a href="" class="nd-tailieu" style="background-image:url('Theme01/Assets/css/images/icon-pdf.png')">Quy định về phạm vi bảo hành các sản phẩm</a><span style="flex-grow:1;background-image: url('Theme01/Assets/css/images/icon-tailieu.png')">2KB</span><a href="#" style="background-image:url('Theme01/Assets/css/images/icon-down.png')">Tải về</a> <a href="#">Chi tiết <i class="fa fa-angle-right"></i></a>
+                            </div>
+                            <div class="items pdf">
+                                <a href="" class="nd-tailieu" style="background-image:url('Theme01/Assets/css/images/icon-pdf.png')">Quy định về phạm vi bảo hành các sản phẩm</a><span style="flex-grow:1;background-image: url('Theme01/Assets/css/images/icon-tailieu.png')">2KB</span><a href="#" style="background-image:url('Theme01/Assets/css/images/icon-down.png')">Tải về</a> <a href="#">Chi tiết <i class="fa fa-angle-right"></i></a>
+                            </div>
+                            <div class="items pdf">
+                                <a href="" class="nd-tailieu" style="background-image:url('Theme01/Assets/css/images/icon-pdf.png')">Quy định về phạm vi bảo hành các sản phẩm</a><span style="flex-grow:1;background-image: url('Theme01/Assets/css/images/icon-tailieu.png')">2KB</span><a href="#" style="background-image:url('Theme01/Assets/css/images/icon-down.png')">Tải về</a> <a href="#">Chi tiết <i class="fa fa-angle-right"></i></a>
+                            </div>
+                            <div class="items pdf">
+                                <a href="" class="nd-tailieu" style="background-image:url('Theme01/Assets/css/images/icon-pdf.png')">Quy định về phạm vi bảo hành các sản phẩm</a><span style="flex-grow:1;background-image: url('Theme01/Assets/css/images/icon-tailieu.png')">2KB</span><a href="#" style="background-image:url('Theme01/Assets/css/images/icon-down.png')">Tải về</a> <a href="#">Chi tiết <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item-wrap">
-                            <div class="item">
-                                <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
-                                <div class="decs">
-                                    <a href="#">Giới thiệu chung</a>
-                                    <div class="date-view">
-                                        <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!--end gt-khac-->             
-                </div>          
+                    </div>
             </div> <!--end col-r-->
         </div>
-    </div><!--content-->   
-      <!--khoi service-->
+    </div><!--content-->
+    <!--khoi service-->
     <div class="service">
         <div class="container">
             <div class="row">
@@ -398,29 +337,7 @@
     <script src="Theme01/Assets/js/x-resmenu.min.js"></script>
     <script src="Theme01/Assets/js/main.js"></script>
     <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src =
-                'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.11&appId=453642988336652';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <script type="text/javascript">
-        (function () {
-            var po = document.createElement("script");
-            po.type = "text/javascript";
-            po.async = true;
-            po.src = "https://apis.google.com/js/platform.js";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(po, s);
-        })();
-    </script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#...">
-    </script>
-    <script>
+ //slide san pham noi bat
         $('.spnoibat-slide').slick({
             dots: false,
             arrows: true,
@@ -430,59 +347,7 @@
         });
     </script>
     <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src =
-                'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.11&appId=453642988336652';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <script type="text/javascript">
-        (function () {
-            var po = document.createElement("script");
-            po.type = "text/javascript";
-            po.async = true;
-            po.src = "https://apis.google.com/js/platform.js";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(po, s);
-        })();
-    </script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#...">
-    </script>
-    <!--slide cac bai gioi thieu khac-->
-    <script>
-        $('.gt-khac').slick({
-            dots: false,
-            infinite: true,
-            speed: 300,
-            adaptiveHeight: true,
-            rows: 3,
-            slidesPerRow: 2,
-            // slidesToShow:4,
-            responsive: [
-            {
-                breakpoint: 1365,
-                settings: {
-                    arrows: true,
-                    rows: 1,
-                    slidesPerRow: 2
-                }
-            },
-            {
-                breakpoint: 767,
-                settings: {
-                    arrows: false,
-                    rows: 1,
-                    slidesPerRow: 1
-                }
-            }
-            ]
-        });
-    </script><!--slide cac bai gioi thieu khac-->
-    <script> //sub-menu_conten show hide
+ //sub-menu_conten show hide
     $('.sub-menu_item').click(function(){
         $(this).toggleClass('sub-menu_show');
         $('.sub-menu_link').removeClass('active');
