--- a/Giaodientrangchu.html
+++ b/Giaodientrangchu.html
@@ -44,8 +44,11 @@
                         <input type="search" value="" placeholder="Tìm kiếm sản phẩm..." />
                         <a href="#" class="search"><i class="fa fa-search"></i></a>
                     </div>
-                    <div class="market">
-                        <a href="#"><i class="fa fa-shopping-bag"></i><b>Giỏ hàng</b></a>
+                    <div class="wrap-market">
+                        <div class="market">
+                            <a href="#"><i class="fa fa-shopping-bag"></i></a><b>Giỏ hàng</b>
+                            <div class="itemTotal">0</div>
+                        </div>
                     </div>
                 </div> <!--end header-wrap-->
             </div>
@@ -69,7 +72,7 @@
                                     <li><a href="#">quạt công nghiệp</a></li>
                                 </ul>
                            </li>
-                           <li><a href="#">sản phẩm nổi bật</a></li>
+                           <li class="menu-sp-hot"><a href="#">sản phẩm nổi bật</a></li>
                            <li><a href="#">công trình</a></li>
                            <li><a href="#">dịch vụ</a></li>
                            <li><a href="#">tuyển dụng</a></li>
