--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,16 @@
 		<li><a href="06lienhe.html">06lienhe</a></li>
 		<li><a href="07guilienhethanhcong.html">07guilienhethanhcong</a></li>
 		<li><a href="08congtrinh.html">08congtrinh</a></li>
+        <li><a href="09-congtrinh-chitiet.html">09-congtrinh-chitiet</a></li>
+        <li><a href="10-sanpham-trangchinh.html">10-sanpham-tranhchinh</a></li>
+        <li><a href="11-sanpham-chitiet-tongquansanpham.html">11-sanpham-chittiet-tongquan</a></li>
+        <li><a href="16-sanpham-ketquatimkiem.html">16-sanpham-ketquatimkiem</a></li>
+        <li><a href="17-dichvu-trangchinh.html">17-dichvu-trangchinh</a></li>
+        <li><a href="18-dichvu-chitiet.html">18-dichvu-chitiet</a></li>
+        <li><a href="19-guidichvuthanhcong.html">19-guidichvuthanhcong</a></li>
+        <li><a href="20-hoidap-hotrokythuat.html">20-hoidap-hotrokythuat</a></li>
+        <li><a href="21.hoidap-hotrokythuat-chitiet.html">21-hoidap-hotrokythuat-chitiet</a></li>
+        <li><a href="22-tailieu-baogia.html"</a>22-tailieu-baogia</li>
     </ul>
 </body>
 </html>
