--- a/01gioithieu.html
+++ b/01gioithieu.html
@@ -51,74 +51,124 @@
             </div>
         </div><!--header-top-->
     </div> <!--end header-->
+
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
-            <a href="#" title="Tin tức">Công trình</a>
+            <a href="#" title="Tin tức">Tin tức</a>
+            <a href="#" title="Giới thiệu">Giới thiệu</a>
         </div>
     </div>
     <div class="content">
-        <div class="container">
-            <div class="modul-congtrinh">
-                <h3>Công trình</h3>
-                <div class="filter-button">
-                    <a href="#">Tất cả</a>
-                    <a href="#">Hút khói</a>
-                    <a href="#">Hệ thống hút khói</a>
-                    <a href="#">Quạt công nghiệp</a>
-                    <a href="#">Quạt tạo gió</a>
-                    <a href="#">Thông gió</a>
-                    <a href="#">Tạo áp buồng thang bộ</a>
-                </div>
-                <div class="row item">
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
-                    </div>
-                    <div class="col-xl-4 items">
-                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/loiichquathutkhoi.jpg" alt=""></a></div>
-                        <a href="#">Khu công nghiệp sài đồng 2</a>
-                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi…</p>
+        <!--phần content-->
+        <div class="container clearfix">
+            <div class="col_l">
+                <div class="gioithieu">
+                    <a href="#" class="gt-cap">Giới thiệu chung</a>
+                    <div class="sub-content">
+                        <ul>
+                            <li><a href="#">Hồ sơ năng lực</a></li>
+                            <li><a href="#">Thành tích giải thưởng</a></li>
+                            <li><a href="#">Sơ đồ tổ chức</a></li>
+                            <li><a href="#">Tầm nhìn sứ mệnh</a></li>
+                        </ul>
                     </div>
                 </div>
-                <!--phan trang-->
+                <div class="spnoibat">
+                    <a href="#" class="cap"><b>sản phẩm nổi bật</b></a>
+                    <div class="spnoibat-slide">
+                        <div class="khoisanpham">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/sanphamnoibat.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><b>Quạt cao áp vận chuyển hạt rời</b></div>
+                        </div>
+                        <div class="khoisanpham">
+                            <div class="imgcw"><a href="#" class="imgc0"><img src="Theme01/Assets/css/pic/images/sanphamnoibat.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text"><b>Quạt cao áp vận chuyển hạt rời</b></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tinnoibat">
+                    <a href="#" class="cap"><b>Tin tức nổi bật</b></a>
+                    <div class="wrap-khoitin">
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
+                        </div>
+                        <div class="khoitin">
+                            <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!--end col-l-->
+            <div class="col_r">
+                <div class="sub-content">
+                    <h3 class="mg-t-0">Giới thiệu</h3>
+                    <div class="khoitin">
+                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
+                        <div class="decs">
+                            <a href="#"><b>Giới thiệu chung</b></a>
+                            <div class="date-view">
+                                <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
+                            </div>
+                            <p>Công ty cổ phần thiết bị công nghiệp Toàn cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo...</p>
+                        </div>
+                    </div>
+                    <div class="khoitin">
+                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
+                        <div class="decs">
+                            <a href="#"><b>Giới thiệu chung</b></a>
+                            <div class="date-view">
+                                <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
+                            </div>
+                            <p>Công ty cổ phần thiết bị công nghiệp Toàn cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo...</p>
+                        </div>
+                    </div>
+                    <div class="khoitin">
+                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
+                        <div class="decs">
+                            <a href="#"><b>Giới thiệu chung</b></a>
+                            <div class="date-view">
+                                <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
+                            </div>
+                            <p>Công ty cổ phần thiết bị công nghiệp Toàn cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo...</p>
+                        </div>
+                    </div>
+                    <div class="khoitin">
+                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
+                        <div class="decs">
+                            <a href="#"><b>Giới thiệu chung</b></a>
+                            <div class="date-view">
+                                <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
+                            </div>
+                            <p>Công ty cổ phần thiết bị công nghiệp Toàn cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo...</p>
+                        </div>
+                    </div>
+                    <div class="khoitin">
+                        <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/tranggioithieu-gioithieu.jpg" alt="" /></a></div>
+                        <div class="decs">
+                            <a href="#"><b>Giới thiệu chung</b></a>
+                            <div class="date-view">
+                                <span><i class="fa fa-calendar"></i> 09/11/2018</span> <span><i class="fa fa-eye"> </i>1.325 lượt xem</span>
+                            </div>
+                            <p>Công ty cổ phần thiết bị công nghiệp Toàn cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo...</p>
+                        </div>
+                    </div>
+                </div> <!--end sub-content-->
                 <div class="paging SplitPages">
+                    <!--phan trang-->
                     <a class="dau" href="#">
                         <i class="fa fa-angle-left"></i>
                         Trang trước
@@ -136,9 +186,9 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 </div>
-            </div> <!-- .end modul-congtrinh -->
+            </div> <!--end col-r-->
         </div>
-    </div>
+    </div><!--content-->
     <!--khoi service-->
     <div class="service">
         <div class="container">
@@ -258,5 +308,14 @@
     <script src="Theme01/Assets/js/slick-1.8.1/slick/slick.js"></script>
     <script src="Theme01/Assets/js/x-resmenu.min.js"></script>
     <script src="Theme01/Assets/js/main.js"></script>
+    <script>
+        $('.spnoibat-slide').slick({
+            dots: false,
+            arrows: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 1
+        });
+    </script>
 </body>
 </html>
