--- a/18-dichvu-chitiet.html
+++ b/18-dichvu-chitiet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -50,30 +50,75 @@
                 </div> <!--end header-wrap-->
             </div>
         </div><!--header-top-->
+        <div class="header-nav">
+            <div class="container">
+                <div id="x-resMenu">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Trang chủ</a></li>
+                            <li class="dropdown">
+                                <a href="#">kỹ thuật công nghệ</a>
+                                <ul>
+                                    <li><a href="#">child content 1</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#">sản phẩm</a>
+                                <ul>
+                                    <li><a href="#">quạt hút khói</a></li>
+                                    <li><a href="#">quạt thông gió</a></li>
+                                    <li><a href="#">quạt công nghiệp</a></li>
+                                </ul>
+                            </li>
+                            <li class="menu-sp-hot"><a href="#">sản phẩm nổi bật</a></li>
+                            <li><a href="#">công trình</a></li>
+                            <li><a href="#">dịch vụ</a></li>
+                            <li><a href="#">tuyển dụng</a></li>
+                            <li><a href="#">tin tức </a></li>
+                            <li><a href="#">Liên hệ</a></li>
+                        </ul>
+                    </nav>
+                    <button class="toggle"><span></span></button>
+                </div>
+            </div>
+        </div>
     </div> <!--end header-->
-
     <div class="page_road">
         <div class="container">
             <a href="#" title="Trang chủ">Trang chủ</a>
             <a href="#" title="Tin tức">Tin tức</a>
         </div>
     </div>
-     
-     <!-- phan content -->
     <div class="content">
+        <!--phần content-->
         <div class="container clearfix">
-            <div class="col_l">
+            <div class="col_l modul-dichvu_chitiet">
                 <div class="sub-menu_content">
                     <ul>
-                        <li class="sub-menu_item"><a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
+                        <li class="sub-menu_item">
+                            <a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
                             <ul class="sub-menu_content-hide">
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>    
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
                             </ul>
                         </li>
-                        <li><a href="#" class="sub-menu_link">Tin công ty<i class="fa fa-angle-down"></i></a>
-                        <li><a href="#" class="sub-menu_link">Tin tuyển dụng<i class="fa fa-angle-down"></i></a>
+                        <li class="sub-menu_item">
+                            <a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
+                            <ul class="sub-menu_content-hide">
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
+                            </ul>
+                        </li>
+                        <li class="sub-menu_item">
+                            <a href="#" class="sub-menu_link">Tin tức sản phẩm<i class="fa fa-angle-down"></i></a>
+                            <ul class="sub-menu_content-hide">
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i> Chia sẻ kiến thức </a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <div class="spnoibat">
@@ -94,31 +139,32 @@
                     <div class="wrap-khoitin">
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                         <div class="khoitin">
                             <div class="imgcw"><a href="#" class="imgc"><img src="Theme01/Assets/css/pic/images/baotri.jpg" alt="Alternate Text" /></a></div>
-                            <div class="text"><a href="#">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</a></div>
+                            <div class="text">Bảo trì, bảo dưỡng quạt công nghiệp, quạt hút</div>
                         </div>
                     </div>
                 </div>
             </div> <!--end col-l-->
             <div class="col_r">
                 <div class="sub-content">
-                    <h3 class="mg-t-0">Bảo trì bảo dưỡng quạt công nghiệp quạt hút</h3>
-                    <div class="commonHeadTool"> <!-- tang giam co chu -->
+                    <h3 class="mg-t-0">Giới thiệu chung</h3>
+                    <!--tăng giảm cỡ chữ-->
+                    <div class="commonHeadTool">
                         <div class="date">18/04/2018 - 07:20 AM - 1.236 lượt xem</div>
                         <div class="right">
                             <div class="changeSize">
@@ -136,10 +182,25 @@
                             <div class="fb-like" data-href="" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                         </div>
                     </div><!--end tang giam co chu-->
-                    <!-- phan noi dung chinh -->
                     <div class="text">
-                        
-                    </div> <!-- end text - phan noi dung chinh -->
+                        <p><b>Công ty cổ phần thiết bị công nghiệp Toàn Cầu</b></p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu xin gửi tới Quý khách hàng lời chào trân trọng và lời chúc sức khỏe – an khang – phồn thịnh, cùng sự hợp tác tới toàn thể Quý khách hàng.</p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu luôn phấn đấu cung cấp các sản phẩm, dịch vụ chất lượng nhằm đáp ứng những yêu cầu ngày càng cao của Quý khách. Với đội ngũ kỹ sư và công nhân viên lành nghề, sáng tạo, chuyên nghiệp và tận tâm trong công việc, Công ty cổ phần thiết bị công nghiệp Toàn Cầu cam kết hợp tác cùng phát triển bền vững với Quý khách trong quá trình công nghiệp hoá hiện nay.</p>
+                        <p>Các sản phẩm, dịch vụ Công ty cổ phần thiết bị công nghiệp Toàn Cầu cung cấp đáp ứng quy trình tự động hoá sản xuất và tạo môi trường sản xuất trong sạch, nhằm đem lại hiệu qủa sản xuất kinh tế cao nhất đối với Quý khách.</p>
+                        <p>Sản phẩm, dịch vụ Công ty cổ phần thiết bị công nghiệp Toàn Cầu cung cấp gồm :</p>
+                        <p>Sản xuất, cung cấp, lắp đặt, tư vấn thiết kế: quạt công nghiệp, quạt hút, quạt ly tâm, quạt hướng trục, quạt ốp tường, quạt hút bụi di động, quạt hút bụi nhà xưởng, quạt thông gió, hệ thống hút lọc bụi,…</p>
+                        <p>Dịch vụ sửa chữa, bảo dưỡng quạt công nghiệp, hệ thống hút lọc bụi….</p>
+                        <p>Với phương châm “càng sáng tạo hơn nữa để tạo ra những sản phẩm có tính ứng dụng cao” (Be creative than the products with high applicability,) chúng tôi sẽ làm hài lòng mọi yêu cầu về dịch vụ của Quý khách hàng cũng như uy tín về sản phẩm.</p>
+                        <p>Công ty cổ phần thiết bị công nghiệp Toàn Cầu cam kết sản xuất và dịch vụ Quạt công nghiệp tốt nhất, hiện đại nhất, đa dạng, phong phú về chủng loại và mẫu mã sản phẩm, kết cấu các sản phẩm có độ bền vững cao, thực tiễn cao.</p>
+                        <p>Hãy liên hệ ngay với chúng tôi để có được sự tư vấn và gói dịch vụ tốt nhất cho nhu cầu sản xuất của Quý khách.</p>
+                        <p>
+                            Công ty cổ phần thiết bị công nghiệp Toàn Cầu<br />
+                            Trụ sở chính: Số 134 Hàng Bạc, phường Hàng Bạc, quận Hoàn Kiếm, Hà Nội<br />
+                            Điện thoại:  0912 345 931<br />
+                            Email: quattoancau@gmail.com<br />
+                            Website: www.quattoancau.vn
+                        </p>
+                    </div><!--end text-->
                     <!--tool gui mail plugin mxh-->
                     <div id="tool-footer-post-detail">
                         <div class="tool-left fl-left">
@@ -182,7 +243,24 @@
                     <div class="fb-comments_wrap">
                         <div class="fb-comments" data-href="https://www.facebook.com/zuck/posts/10102735452532991?comment_id=1070233703036185" data-width="100%" data-numposts="3"></div>
                     </div>
-                    <h3>Các bài giới thiệu khác</h3>
+                    <!--dang ky dich vu-->
+                    <div class="form-register">
+                        <h3> Đăng ký dịch vụ</h3>
+                        <div class="wrap-register">
+                            <p>Quý khách vui lòng điền thông tin để chúng tôi kịp thời tư vấn những giải pháp tốt nhất</p>
+                            <div class="register">
+                                <p class="name"><input  type="text" value="" placeholder="Họ và tên" /></pclass="name">
+                                <p class="sdt"><input  type="number" value="" placeholder="Số điện thoại" /></p>
+                                <p class="mail"><input type="email" value="" placeholder="Email" /></p>
+                                <p class="location" ><input type="text" value="" placeholder="Địa chỉ" /></p>
+                                <p class="area">
+                                    <textarea name cols="400" rows="3" placeholder="Nhập yêu cầu cụ thể về dịch vụ"></textarea>
+                                    <a href="#" class="muangay">Đăng ký dịch vụ</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div> <!--end register-->
+                    <h3>Các dịch vụ khác</h3>
                     <!--cac bai gioi thieu khac-->
                     <div class="gt-khac">
                         <div class="item-wrap">
@@ -273,12 +351,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!--end gt-khac-->             
-                </div>          
+                    </div><!--end gt-khac-->
+                </div> <!--end sub-content-->
             </div> <!--end col-r-->
         </div>
-    </div><!--content-->   
-      <!--khoi service-->
+    </div><!--content-->
+    <!--khoi service-->
     <div class="service">
         <div class="container">
             <div class="row">
@@ -397,6 +475,7 @@
     <script src="Theme01/Assets/js/slick-1.8.1/slick/slick.js"></script>
     <script src="Theme01/Assets/js/x-resmenu.min.js"></script>
     <script src="Theme01/Assets/js/main.js"></script>
+    <!--tool like share cmt fb-->
     <script>
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -420,7 +499,8 @@
     </script>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#...">
     </script>
-    <script>
+    <!--end-->
+    <script> //slide san pham noi bat
         $('.spnoibat-slide').slick({
             dots: false,
             arrows: true,
@@ -429,30 +509,17 @@
             slidesToShow: 1
         });
     </script>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src =
-                'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.11&appId=453642988336652';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
+    <script> //sub-menu_conten show hide
+    $('.sub-menu_item').click(function(){
+        $(this).toggleClass('sub-menu_show');
+        $('.sub-menu_link').removeClass('active');
+        $('.sub-menu_link').addClass('active');
+        return false;
+    });
+
+
     </script>
-    <script type="text/javascript">
-        (function () {
-            var po = document.createElement("script");
-            po.type = "text/javascript";
-            po.async = true;
-            po.src = "https://apis.google.com/js/platform.js";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(po, s);
-        })();
-    </script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#...">
-    </script>
-    <!--slide cac bai gioi thieu khac-->
+    <!--slide cac dich vu khac-->
     <script>
         $('.gt-khac').slick({
             dots: false,
@@ -464,14 +531,6 @@
             // slidesToShow:4,
             responsive: [
             {
-                breakpoint: 1365,
-                settings: {
-                    arrows: true,
-                    rows: 1,
-                    slidesPerRow: 2
-                }
-            },
-            {
                 breakpoint: 767,
                 settings: {
                     arrows: false,
@@ -482,15 +541,5 @@
             ]
         });
     </script><!--slide cac bai gioi thieu khac-->
-    <script> //sub-menu_conten show hide
-    $('.sub-menu_item').click(function(){
-        $(this).toggleClass('sub-menu_show');
-        $('.sub-menu_link').removeClass('active');
-        $('.sub-menu_link').addClass('active');
-        return false;
-    });
-
-
-    </script>
 </body>
 </html>
